# gromnie-scripts

./: Cargo.toml  README.md
auto-login/: Cargo.toml
auto-login/src/: lib.rs
echo/: Cargo.toml
echo/src/: lib.rs
file-logger/: Cargo.toml
file-logger/src/: lib.rs
hello-world/: Cargo.toml
hello-world/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
