[workspace]
members = ["auto-login", "echo", "file-logger", "hello-world", "xtask"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Bryce Mecum <petridish@gmail.com>"]
edition = "2024"
license = "MIT"
publish = false

[workspace.dependencies]
gromnie-scripting-api = { path = "../gromnie/crates/gromnie-scripting-api", default-features = false }
